# snap_cam

./: .gitmodules  CMakeLists.txt  README.md  package.xml  package.xml~
calib/: cameraParameters.yaml
calib/VGA/: cameraParameters.yaml
calib/highres/QVGA/: cameraParameters.yaml
calib/highres/VGA/: cameraParameters.yaml
calib/optflow/QVGA/: cameraParameters.yaml
include/: SnapCam.h  calib_yaml_interface.h  logging.h  ringbuffer.h  snap_cam_publisher.h
launch/: cameraCalibrator.launch  cameraCalibratorHighres.launch  cameraCalibrator_highres.launch  highres.launch  highres_cam.launch  optflow.launch  optical_flow_cam.launch  optical_flow_node.launch
libcamera/: CMakeLists.txt  Makefile.am
libcamera/inc/: camera.h  camera_parameters.h
libcamera/src/: camera_log.h  camera_memory.cpp  camera_memory.h  camera_parameters.cpp  qcamera2.cpp  qcamera2.h  qcamera_extensions.h
libcamera/test/: camera_test.cpp  camera_test.cpp~
scripts/: CameraCalibrator.py  CameraCalibratorHighres.py
src/: SnapCam.cpp  optical_flow.cpp  ringbuffer.cpp  snap_cam_publisher.cpp
src/nodes/: optical_flow_node.cpp  snap_cam_publisher_node.cpp
